SERVER-115710 Ensure database version doesn't change during a sharded-cluster listDatabases command  (#48823)

GitOrigin-RevId: 7251e59eba1782804620ace9608d51f1cdaf890e